Fixes text spillage on meetings index view.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,9 +48,9 @@ body {
   margin-right: 15px;
   margin-bottom: 20px;
 
-  p:first-of-type {
-    font-weight: 500;
-  }
+}
+.card-header {
+  font-weight: 500;
 }
 .card-left-padding {
   padding-left: 10px;
